# hsi-wizard

./: .coveragerc  .flake8  .gitignore  .pydocstyle  README.md  ahhhh.py  clean.sh  pyproject.toml  run_style_checks.sh
.github/workflows/: build.yaml  draft-pdf.yml  main-branch.yml  main.yaml  non-main.yml  style-check.yaml  style.yaml  test-and-coverage.yaml
docs/: .readthedocs.yaml  conf.py  index.rst  module.rst
docs/source/: conf.py  modules.rst  wizard._core.rst  wizard._processing.rst  wizard.rst
docs/source/modules/core/: datacube.rst
docs/source/modules/processing/: cluster.rst
docs/source/modules/utils/: loader.rst
examples/02_process/: 00_smooth_kmeans.py
examples/03_create_Templates/: 03_example.py
examples/04_use_Templates/: 04_example.py
examples/05_read_write/: 05_isodata_example.py
hsi_wizard/: __init__.py  datacube.py
hsi_wizard/_utils/: __init__.py  decorators.py  fileHandler.py  image.py  template_handler.py  tracker.py
hsi_wizard/utils/: decorators.py  tracker.py
joss/: paper.bib  paper.md
src/hsi_wizard/: datacube.py
tests/: test_DataCube.py  test_core.py  test_decorators.py  test_exploration.py  test_fileHanlder.py  test_processing.py  test_utils.py
wizard/: __init__.py  datacube.py
wizard/_core/: __init__.py  datacube.py  datacube_ops.py  eda.py
wizard/_exploration/: __init__.py  plotter.py  roi_inspector.py  surface.py
wizard/_processing/: __init__.py  cluster.py  image.py  spectral.py
wizard/_utils/: __init__.py  data_loader.py  decorators.py  fileHandler.py  fsm_reader.py  helper.py  helper_functions.py  image.py  tracker.py
wizard/_utils/_loader/: __init__.py  _helper.py  csv.py  fsm.py  images.py  nrrd.py  pickle.py  tdms.py  xlsx.py
