
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "hsi_wizard"
version = "0.0.1"
authors = ["Felix Wuehler <f.wuehler@hs-mannheim.de>"]
description = "A magical hyperspectral imaing package"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
# Your regular dependencies go here
numpy="*"
matplotlib="*"
opencv-python="*"
rich="*"

[tool.poetry.dev-dependencies]
# Your development dependencies go here
pydocstyle = "*"
flake8 = "*"


[tool.poetry.scripts]
# Your scripts go here, if any

[tool.poetry.extras]
# Extras, if any, go here


[project.urls]
Homepage = "https://github.com/BlueSpacePotato/hsi-wizard"
Issues = "https://github.com/BlueSpacePotato/hsi-wizard/issues"



