[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "hsi_wizard"}

[project]
name = "hsi_wizard"
version = "0.0.2"
authors = [
    {name = "Felix Wuehler", email="f.wuehler@hs-mannheim.de"},
]
description = "A magical hyperspectral imaing package"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
# Your regular dependencies go here
    "numpy",
    "matplotlib",
    "opencv-python",
    "rich",
    "specio",
    "nptdms",
    "pandas",
]

[project.optional-dependencies]
dev = ["pydocstyle", "flake8", "pytest", "coverage"]
tests = ["pytest", "coverage"]

[project.urls]
Homepage = "https://github.com/BlueSpacePotato/hsi-wizard"
Issues = "https://github.com/BlueSpacePotato/hsi-wizard/issues"
